--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +6,7 @@
 
 body {
   font-family: "Arial", sans-serif;
-  background-color: #f9fafb;
+  background-color: #f4f4f4;
   color: #333;
   padding: 20px;
 }
@@ -19,27 +18,21 @@ body {
   padding: 20px;
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
   margin-bottom: 20px;
-  font-size: 2.8rem;
-  color: #34495e;
-  letter-spacing: 1px;
+  font-size: 2.5rem;
+  color: #4caf50;
 }
 
 .content {
   display: block;
-  /* flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between; */
 }
 
 .columns {
   display: flex;
-  flex: 1;
-  gap: 20px;
   width: 100%;
 }
 
@@ -50,20 +43,13 @@ h1 {
   padding: 20px;
   margin: 10px;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.fruit-list:hover,
-.jar:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
   margin-bottom: 15px;
   font-size: 1.75rem;
-  color: #2c3e50;
+  color: #333;
 }
 
 ul {
@@ -73,8 +59,8 @@ ul {
 }
 
 li {
-  padding: 15px;
-  border-bottom: 1px solid #e0e0e0;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -90,19 +76,18 @@ span {
 }
 
 button {
-  padding: 8px 14px;
+  padding: 6px 12px;
   font-size: 1rem;
-  background-color: #2ecc71;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  transition: background-color 0.3s;
 }
 
 button:hover {
-  background-color: #27ae60;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  background-color: #45a049;
 }
 
 .group-header {
@@ -111,21 +96,9 @@ button:hover {
   align-items: center;
   margin-bottom: 10px;
   padding: 10px;
-  background-color: #f5f5f5;
+  background-color: #eee;
   border-radius: 5px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-.group-header:hover {
-  background-color: #e0e0e0;
-}
-
-.group-header h3 {
-  margin: 0;
-  font-size: 1.3rem;
-  color: #2980b9;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .group-by-select {
@@ -139,21 +112,13 @@ label {
   margin-right: 10px;
   font-size: 1.2rem;
   font-weight: bold;
-  color: #34495e;
 }
 
 select {
-  padding: 8px 12px;
+  padding: 6px 10px;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #fff;
-  transition: border-color 0.3s ease;
-}
-
-select:focus {
-  border-color: #3498db;
-  outline: none;
 }
 
 .jar ul {
